# language-vhdl-quote

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  language-vhdl-quote.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
Language/VHDL/: Parser.hs  Quote.hs  Syntax-instances.hs  Syntax.hs
Language/VHDL/Parser/: Alex.hs  Exceptions.hs  Lexer.x  Monad.hs  Parser.y  Tokens.hs
examples/parse/: Main.hs  Opts.hs
tests/: Main.hs
tests/unit/: Main.hs
tests/vhdl/: Main.hs
