name:          language-vhdl-quote
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016-2020 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://github.com/mainland/language-vhdl-quote
bug-reports:   https://github.com/mainland/language-vhdl-quote/issues
category:      Language
synopsis:      VHDL quasiquoting library.
tested-with:   GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.3,
               GHC==8.10.1

description:
  This package provides a general parser and quasiquoter for the VHDL language.

build-type: Simple

extra-source-files:
  Language/VHDL/Syntax-instances.hs

flag full-haskell-antiquotes
  description: Support full Haskell expressions/patterns in antiquotes. This
               adds a dependency on haskell-src-meta, which increases
               compilation time.
  default:     True
  manual:      True

library
  default-language: Haskell98

  build-depends:
    array                  >= 0.2   && < 0.6,
    base                   >= 4.5   && < 5,
    bytestring             >= 0.9   && < 0.12,
    containers             >= 0.4   && < 0.7,
    exception-mtl          >= 0.3   && < 0.5,
    exception-transformers >= 0.3   && < 0.5,
    filepath               >= 1.2   && < 1.5,
    haskell-src-exts       >= 1.21  && < 1.24,
    mainland-pretty        >= 0.6   && < 0.8,
    mtl                    >= 2.0   && < 3,
    srcloc                 >= 0.4   && < 0.7,
    syb                    >= 0.3   && < 0.8,
    symbol                 >= 0.1   && < 0.3,
    text                   >= 1.2   && < 1.3,
    template-haskell

  if flag(full-haskell-antiquotes)
    build-depends: haskell-src-meta >= 0.4 && < 0.9
  else
    build-depends: haskell-exp-parser >= 0.1 && < 0.2

  build-tools:
    alex >=3,
    happy

  exposed-modules:
    Language.VHDL.Parser
    Language.VHDL.Parser.Alex
    Language.VHDL.Parser.Exceptions
    Language.VHDL.Parser.Lexer
    Language.VHDL.Parser.Monad
    Language.VHDL.Parser.Parser
    Language.VHDL.Parser.Tokens
    Language.VHDL.Quote
    Language.VHDL.Syntax

  include-dirs: .

  ghc-options: -Wall

  if flag(full-haskell-antiquotes)
    cpp-options: -DFULL_HASKELL_ANTIQUOTES

test-suite unit
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Main.hs

  default-language: Haskell98

  build-depends:
    language-vhdl-quote,
    HUnit           >= 1.2 && < 1.7,
    base            >= 4   && < 5,
    bytestring      >= 0.9 && < 0.12,
    hspec           >= 2.5 && < 2.8,
    hspec-core      >= 2.5 && < 2.8,
    mainland-pretty >= 0.6 && < 0.8,
    srcloc          >= 0.4 && < 0.7,
    symbol          >= 0.1 && < 0.3

  if flag(full-haskell-antiquotes)
    cpp-options: -DFULL_HASKELL_ANTIQUOTES

executable parser
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples/parse

  other-modules:
    Opts

  build-depends:
    language-vhdl-quote,
    base            >= 4.5 && < 5,
    containers      >= 0.5 && < 0.7,
    bytestring      >= 0.9 && < 0.12,
    mainland-pretty >= 0.7 && < 0.8,
    srcloc          >= 0.4 && < 0.7,
    text            >= 1.2 && < 1.3

source-repository head
  type:     git
  location: git://github.com/mainland/language-vhdl-quote.git
